[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A client library for CoreOS's etcd."
documentation = "https://docs.rs/etcd"
edition = "2018"
homepage = "https://github.com/jimmycuadra/rust-etcd"
keywords = ["etcd", "coreos", "database"]
license = "MIT"
name = "etcd"
readme = "README.md"
repository = "https://github.com/jimmycuadra/rust-etcd"
version = "0.9.0"

[lib]
test = false

[dependencies]
futures = "0.3.0"
hyper = { version = "0.13.1", features = ["stream"] }
bytes = "0.5.3"
http = "0.2.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
url = "2.1.1"
base64 = "0.11"
log = "0.4.6"
tokio = { version = "0.2", features = ["time"] }

[dependencies.hyper-tls]
optional = true
version = "0.4.1"

[dependencies.native-tls]
optional = true
version = "0.2.2"

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]
